--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,7 +33,7 @@
 
     <section id="programme">
         <h2>Programme du Festival</h2>
-        <p>Découvrez la liste complète des spectacles et soirées de cette édition :</p>
+        <p>Découvrez la liste complète des spectacles de cette édition :</p>
 
         <div class="filters">
             <label for="filter-date">Filtrer par date :</label>
@@ -58,16 +58,6 @@
         </div>
 
         <ul class="show-list">
-            <!-- Exemple de spectacle -->
-            <li class="show-item">
-                <img src="https://images.lanouvellerepublique.fr/image/upload/f_auto/66c7777080e958715f8b45fe.jpg" alt="Image du spectacle Rock Band">
-                <div>
-                    <h3>Rock Band Live</h3>
-                    <p>Vendredi 22 octobre 2024 - 20h00</p>
-                    <a href="details-soiree.html">Détails de la soirée</a>
-                </div>
-            </li>
-            <!-- Autres spectacles à lister ici -->
         </ul>
     </section>
 
@@ -99,7 +89,7 @@
     <section id="compte">
         <h2>Mon Compte</h2>
         <p>Accédez à votre profil pour gérer vos billets et vos réservations.</p>
-        <a href="connexion.html" class="cta-button">Se connecter / S'inscrire</a>
+        <a href="signin.html" class="cta-button">Se Connecter</a>
     </section>
 
 </main>
@@ -113,5 +103,8 @@
 </footer>
 
 </body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js" integrity="sha512-E1dSFxg+wsfJ4HKjutk/WaCzK7S2wv1POn1RRPGh8ZK+ag9l244Vqxji3r6wgz9YBf6+vhQEYJZpSjqWFPg9gg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="js/main.js"></script>
 
 </html>
