--- a/frontend/src/signin.html
+++ b/frontend/src/signin.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Connexion - NRV.net</title>
+    <link rel="stylesheet" href="css/style.css"> <!-- Lien vers le fichier CSS -->
 </head>
 <body>
+<header>
+    <div class="logo">
+        <a href="index.html">NRV.net</a>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="signup.html">S'inscrire</a></li>
+        </ul>
+    </nav>
+</header>
 
+<section id="signin">
+    <div class="container">
+        <h1>Connexion</h1>
+        <p>Connectez-vous à votre compte pour accéder à vos billets et à d'autres fonctionnalités.</p>
+
+        <form action="/api/utilisateurs/signin" method="POST">
+            <div class="form-group">
+                <label for="email">Adresse email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Mot de passe</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+
+            <button type="submit" class="btn">Se connecter</button>
+        </form>
+
+        <p>Pas encore de compte ? <a href="signup.html">S'inscrire</a></p>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2024 Nancy Rock Vibration. Tous droits réservés.</p>
+</footer>
 </body>
 </html>
