--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -2,7 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title><!DOCTYPE html>
+        <html lang="fr">
+        <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Inscription - NRV.net</title>
+    <link rel="stylesheet" href="css/style.css"> <!-- Lien vers le fichier CSS -->
+</head>
+<body>
+<header>
+    <div class="logo">
+        <a href="index.html">NRV.net</a>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="signin.html">Se connecter</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section id="signup">
+    <div class="container">
+        <h1>Inscription</h1>
+        <p>Créez un compte pour acheter des billets et gérer vos réservations.</p>
+
+        <form action="/api/utilisateurs/signup" method="POST">
+            <div class="form-group">
+                <label for="name">Nom complet</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Adresse email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Mot de passe</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+
+            <div class="form-group">
+                <label for="confirm_password">Confirmez le mot de passe</label>
+                <input type="password" id="confirm_password" name="confirm_password" required>
+            </div>
+
+            <button type="submit" class="btn">S'inscrire</button>
+        </form>
+
+        <p>Déjà un compte ? <a href="signin.html">Se connecter</a></p>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2024 Nancy Rock Vibration. Tous droits réservés.</p>
+</footer>
+</body>
+</html>
+</title>
 </head>
 <body>
 
