--- a/frontend/src/signin.html
+++ b/frontend/src/signin.html
@@ -25,7 +25,7 @@
         <h1>Connexion</h1>
         <p>Connectez-vous à votre compte pour accéder à vos billets et à d'autres fonctionnalités.</p>
 
-        <form action="/api/utilisateurs/signin" method="POST">
+        <div method="POST">
             <div class="form-group">
                 <label for="email">Adresse email</label>
                 <input type="email" id="email" name="email" required>
@@ -36,8 +36,8 @@
                 <input type="password" id="password" name="password" required>
             </div>
 
-            <button type="submit" class="btn">Se connecter</button>
-        </form>
+            <button onclick="signIn()" type="submit" class="btn">Se connecter</button>
+        </div>
 
         <p>Pas encore de compte ? <a href="signup.html">S'inscrire</a></p>
     </div>
@@ -47,4 +47,5 @@
     <p>&copy; 2024 Nancy Rock Vibration. Tous droits réservés.</p>
 </footer>
 </body>
+<script src="js/auth.js"></script>
 </html>
