--- a/frontend/src/buy.html
+++ b/frontend/src/buy.html
@@ -1,95 +1,76 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Achat de Billets - NRV.net</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Achat de Billets - NRV.net</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
+
 <header>
-    <div class="logo">
-        <a href="index.html">NRV.net</a>
+  <nav>
+    <a href="index.html" class="logo">NRV.net</a>
+    <ul>
+      <li><a href="#programme">Programme</a></li>
+      <li><a href="#acheter-billets">Acheter des billets</a></li>
+      <li><a href="#lieux">Lieux</a></li>
+      <li><a id="auth-email" href="signin.html">Connexion</a></li>
+      <li style="display: none;" id="auth-signout">
+        <a onclick="signOut()" href="#">Déconnexion</a>
+      </li>
+    </ul>
+    <div class="shopping-cart">
+      <i class="fa-solid fa-cart-shopping"></i>
+      <div class="shopping-cart-count">1</div>
+      <div class="shopping-cart-content" style="display: none;">
+      </div>
     </div>
-    <nav>
-        <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="programme.html">Programme</a></li>
-            <li><a href="signin.html">Se connecter</a></li>
-            <li><a href="signup.html">S'inscrire</a></li>
-        </ul>
-    </nav>
+  </nav>
 </header>
 
-<section id="achat-billets">
-    <div class="container">
-        <h1>Achat de Billets</h1>
+<main>
+  <section id="buy">
+    <h1>Acheter des Billets</h1>
+    <div class="buy-container">
+      <div class="cart">
+      </div>
 
-        <!-- Détails de la soirée -->
-        <div class="soiree-details">
-            <h2>Soirée Metal - 22 octobre 2024</h2>
-            <p><strong>Lieu :</strong> Parc de la Pépinière - 19h00</p>
-            <p><strong>Tarifs :</strong> 25€ (normal) / 18€ (réduit)</p>
-            <div class="spectacles">
-                <h3>Spectacles :</h3>
-                <ul>
-                    <li><strong>Metal Madness</strong> - Metallica, Iron Maiden - 19h30</li>
-                    <li><strong>Blackened Thrash</strong> - Slayer, Sepultura - 21h00</li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- Formulaire d'achat de billets -->
-        <form id="billet-form">
-            <h3>Sélectionnez vos billets</h3>
-
-            <div class="form-group">
-                <label for="billets-normaux">Nombre de billets (normal - 25€) :</label>
-                <input type="number" id="billets-normaux" name="billets-normaux" min="0" value="0">
-            </div>
-
-            <div class="form-group">
-                <label for="billets-reduits">Nombre de billets (réduit - 18€) :</label>
-                <input type="number" id="billets-reduits" name="billets-reduits" min="0" value="0">
-            </div>
-
-            <!-- Résumé du panier -->
-            <div class="panier-summary">
-                <h3>Résumé du Panier</h3>
-                <p><strong>Billets normaux :</strong> <span id="res-normaux">0</span> x 25€</p>
-                <p><strong>Billets réduits :</strong> <span id="res-reduits">0</span> x 18€</p>
-                <p><strong>Total :</strong> <span id="total">0€</span></p>
-            </div>
-
-            <button type="submit" class="btn">Ajouter au Panier</button>
+      <div class="payment-info">
+        <h2>Informations de Paiement</h2>
+        <form id="payment-form">
+          <div class="form-group">
+            <label for="card-number">Numéro de Carte</label>
+            <input type="text" id="card-number" placeholder="**** **** **** ****" required>
+          </div>
+          <div class="form-group">
+            <label for="expiry-date">Date d'expiration</label>
+            <input type="text" id="expiry-date" placeholder="MM/AA" required>
+          </div>
+          <div class="form-group">
+            <label for="cvv">CVV</label>
+            <input type="text" id="cvv" placeholder="***" required>
+          </div>
+          <button onclick="payCart()" type="submit">Payer</button>
         </form>
+      </div>
     </div>
-</section>
+  </section>
+</main>
 
 <footer>
-    <p>&copy; 2024 Nancy Rock Vibration. Tous droits réservés.</p>
+  <p>&copy; 2024 NRV.net - Nancy Rock Vibration</p>
+  <ul>
+    <li><a href="#mentions-legales">Mentions légales</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </footer>
 
-<script>
-    // Mise à jour du récapitulatif du panier
-    const billetsNormauxInput = document.getElementById('billets-normaux');
-    const billetsReduitsInput = document.getElementById('billets-reduits');
-    const resNormaux = document.getElementById('res-normaux');
-    const resReduits = document.getElementById('res-reduits');
-    const totalElem = document.getElementById('total');
-
-    function updatePanier() {
-        const billetsNormaux = parseInt(billetsNormauxInput.value) || 0;
-        const billetsReduits = parseInt(billetsReduitsInput.value) || 0;
-        const total = (billetsNormaux * 25) + (billetsReduits * 18);
-        resNormaux.textContent = billetsNormaux;
-        resReduits.textContent = billetsReduits;
-        totalElem.textContent = total + '€';
-    }
-
-    billetsNormauxInput.addEventListener('input', updatePanier);
-    billetsReduitsInput.addEventListener('input', updatePanier);
-</script>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js" integrity="sha512-E1dSFxg+wsfJ4HKjutk/WaCzK7S2wv1POn1RRPGh8ZK+ag9l244Vqxji3r6wgz9YBf6+vhQEYJZpSjqWFPg9gg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="js/buy.js"></script>
+<script src="js/auth.js"></script>
 </html>
