--- a/frontend/src/details.html
+++ b/frontend/src/details.html
@@ -14,11 +14,18 @@
   </div>
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="programme.html">Programme</a></li>
-      <li><a href="signin.html">Se connecter</a></li>
-      <li><a href="signup.html">S'inscrire</a></li>
+      <li><a href="index.html">Acceuil</a></li>
+      <li><a id="auth-email" href="signin.html">Connexion</a></li>
+      <li style="display: none;" id="auth-signout">
+        <a onclick="signOut()" href="#">Deconnexion</a>
+      </li>
     </ul>
+    <div class="shopping-cart">
+      <i class="fa-solid fa-cart-shopping"></i>
+      <div class="shopping-cart-count">1</div>
+      <div class="shopping-cart-content" style="display: none;">
+      </div>
+    </div>
   </nav>
 </header>
 
@@ -33,4 +40,6 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js" integrity="sha512-E1dSFxg+wsfJ4HKjutk/WaCzK7S2wv1POn1RRPGh8ZK+ag9l244Vqxji3r6wgz9YBf6+vhQEYJZpSjqWFPg9gg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/details.js"></script>
+<script src="js/cart.js"></script>
+<script src="js/auth.js"></script>
 </html>
