--- a/frontend/src/profile.html
+++ b/frontend/src/profile.html
@@ -16,8 +16,9 @@
     <a href="index.html" class="logo">NRV.net</a>
     <ul>
       <li><a href="index.html">Acceuil</a></li>
-      <li><a id="auth-email" href="#compte">Mon compte</a></li>
-      <li><a onclick="signOut()" href="#">Deconnexion</a>
+      <li><a id="auth-email" href="signin.html">Connexion</a></li>
+      <li style="display: none;" id="auth-signout">
+        <a onclick="signOut()" href="#">Deconnexion</a>
       </li>
     </ul>
   </nav>
