--- a/frontend/src/buy.html
+++ b/frontend/src/buy.html
@@ -54,7 +54,7 @@
             <label for="cvv">CVV</label>
             <input type="text" id="cvv" placeholder="***" required>
           </div>
-          <button onclick="payCart()" type="submit">Payer</button>
+          <button onclick="payCart()">Payer</button>
         </form>
       </div>
     </div>
