--- a/frontend/src/tickets.html
+++ b/frontend/src/tickets.html
@@ -14,11 +14,11 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#programme">Programme</a></li>
-            <li><a href="#acheter-billets">Acheter des billets</a></li>
-            <li><a href="#lieux">Lieux</a></li>
+            <li><a href="index.html">Acceuil</a></li>
             <li><a id="auth-email" href="signin.html">Connexion</a></li>
-            <li style="display: none;" id="auth-signout"><a onclick="signOut()" href="#">Deconnexion</a></li>
+            <li style="display: none;" id="auth-signout">
+                <a onclick="signOut()" href="#">Deconnexion</a>
+            </li>
         </ul>
     </nav>
 </header>
