--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -66,7 +66,7 @@
     <section id="acheter-billets">
         <h2>Acheter des billets</h2>
         <p>Réservez vos billets pour les soirées du festival directement en ligne.</p>
-        <a href="acheter-billets.html" class="cta-button">Acheter des billets</a>
+        <p>Cliquez sur un spectacle et réservez directement sur la page du spéctacle.</p>
     </section>
 
     <section id="lieux">
