--- a/frontend/src/signin.html
+++ b/frontend/src/signin.html
@@ -26,7 +26,7 @@
         <p>Connectez-vous à votre compte pour accéder à vos billets et à d'autres fonctionnalités.</p>
         <p id="auth-error" style="color: red;"></p>
 
-        <div method="POST">
+        <div>
             <div class="form-group">
                 <label for="email">Adresse email</label>
                 <input type="email" id="email" name="email" required>
