--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -26,7 +26,7 @@
         <p>Inscrivez vous pour pouvoir acheter des billets sur la plateforme.</p>
         <p id="auth-error" style="color: red;"></p>
 
-        <div method="POST">
+        <div>
             <div class="form-group">
                 <label for="name">Nom Complet</label>
                 <input type="text" id="name" name="name" required>
@@ -46,7 +46,7 @@
                 <label for="password2">Confirmer mot de passe</label>
                 <input type="password" id="password2" name="password2" required>
             </div>
-            <button onclick="signUp()" type="submit" class="btn">S'inscrire</button>
+            <button onclick="signUp()" class="btn">S'inscrire</button>
         </div>
 
         <p>Deja inscrit ? <a href="signin.html">Se connecter</a></p>
