--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -61,6 +61,10 @@
 
         <ul class="show-list">
         </ul>
+        <div class="pagination" style="margin-top: 20px;">
+            <button class="btn" id="prevBtn">Précédent</button>
+            <button class="btn" id="nextBtn">Suivant</button>
+        </div>
     </section>
 
     <section id="acheter-billets">
