--- a/frontend/src/tickets.html
+++ b/frontend/src/tickets.html
@@ -7,6 +7,17 @@
     <title>Mes Billets - NRV.net</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        @media print {
+            header, footer, h1, .btn {
+                display: none;
+            }
+
+            .billet {
+                zoom: 5;
+            }
+        }
+    </style>
 </head>
 <body>
 <header>
