--- a/frontend/src/signin.html
+++ b/frontend/src/signin.html
@@ -48,7 +48,7 @@
     <p>&copy; 2024 Nancy Rock Vibration. Tous droits réservés.</p>
 </footer>
 </body>
-<script src="js/auth.js"></script>
+<script type="module" src="js/auth.js"></script>
 <script>
     window.addEventListener('load', function() {
         if(isLoggedIn()) {
