--- a/frontend/src/tickets.html
+++ b/frontend/src/tickets.html
@@ -49,7 +49,7 @@
 </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js" integrity="sha512-E1dSFxg+wsfJ4HKjutk/WaCzK7S2wv1POn1RRPGh8ZK+ag9l244Vqxji3r6wgz9YBf6+vhQEYJZpSjqWFPg9gg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="js/tickets.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/cart.js"></script>
+<script type="module" src="js/tickets.js"></script>
+<script type="module" src="js/auth.js"></script>
+<script type="module" src="js/cart.js"></script>
 </html>
