--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -46,7 +46,7 @@
                 <label for="password2">Confirmer mot de passe</label>
                 <input type="password" id="password2" name="password2" required>
             </div>
-            <button onclick="signUp()" class="btn">S'inscrire</button>
+            <button id="signup-button" type="submit" class="btn">S'inscrire</button>
         </div>
 
         <p>Deja inscrit ? <a href="signin.html">Se connecter</a></p>
@@ -58,11 +58,15 @@
 </footer>
 </body>
 <script type="module" src="js/auth.js"></script>
-<script>
+<script type="module">
+    import { isLoggedIn, signUp } from "./js/auth.js";
+
     window.addEventListener('load', function() {
-        if(isLoggedIn()) {
+        if (isLoggedIn()) {
             window.location.href = "profile.html";
         }
+
+        document.getElementById('signup-button').addEventListener('click', signUp);
     });
 </script>
 </html>
